test for ServiceFile fixed